--- a/layouts/partials/page-single/footer.html
+++ b/layouts/partials/page-single/footer.html
@@ -3,6 +3,7 @@
   {{ template "_internal/google_analytics_async.html" . }}
 {{ end }}
 {{ partial "footer/font-awesome-js.html" . }}
+{{ partial "footer/academicons-css.html" . }}
 {{ partial "highlight-js.html" . }}
 {{ with .Site.Params.toc }}
 {{ if eq . "tocbot" }}
