--- a/layouts/partials/header/styles.html
+++ b/layouts/partials/header/styles.html
@@ -17,3 +17,11 @@
 <link rel="stylesheet" href="{{ $tocbot.RelPermalink }}" integrity="{{ $tocbot.Data.Integrity }}">
 {{ end }}
 {{ end }}
+
+{{ range .Site.Params.custom_css }}
+    <link rel="stylesheet" href="{{ $.Site.BaseURL }}{{ . }}">
+{{ end }}
+
+{{ range .Site.Params.custom_headers }}
+    {{ partial . }}
+{{ end }}
